samples/_failures_safe/1761799878_d68731_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e50474e6.c: In function ‘main’:
./samples/SAFE/__tmp_e50474e6.c:171:12: error: missing terminating " character
  171 |     printf("
      |            ^
./samples/SAFE/__tmp_e50474e6.c:171:5: error: expected expression at end of input
  171 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_e50474e6.c:171:5: error: expected declaration or statement at end of input
